[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/menu/MenuTab.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/menu/InventoryMenu.gd" type="Script" id=2]
[ext_resource path="res://tilesets/int_tileset.tres" type="TileSet" id=3]
[ext_resource path="res://scenes/menu/ItemList.tscn" type="PackedScene" id=4]
[ext_resource path="res://fonts/textFont.tres" type="DynamicFont" id=5]
[ext_resource path="res://scenes/menu/MenuScroller.tscn" type="PackedScene" id=6]
[ext_resource path="res://scripts/menu/ItemList.gd" type="Script" id=7]

[sub_resource type="GDScript" id=1]
script/source = "tool
extends TileMap

onready var label:Label = get_node(\"TextContainer/Label\")

func _ready():
	label.text = name

func setActive():
	label.add_color_override(\"font_color\", Colors.white)
	show_behind_parent = false

func setInactive():
	label.add_color_override(\"font_color\", Colors.shade3)
	show_behind_parent = true
"

[node name="InventoryMenu" type="Node2D"]
script = ExtResource( 2 )

[node name="Tabs" type="TileMap" parent="."]
position = Vector2( 0, 18 )
tile_set = ExtResource( 3 )
cell_size = Vector2( 9, 9 )
format = 1
tile_data = PoolIntArray( 65536, 1, 0, 65537, 1, 1, 65538, 1, 1, 65539, 1, 1, 65540, 1, 1, 65541, 1, 1, 65542, 1, 1, 65543, 1, 1, 65544, 1, 1, 65545, 1, 1, 65546, 1, 1, 65547, 1, 1, 65548, 1, 1, 65549, 1, 1, 65550, 1, 1, 65551, 1, 1, 65552, 1, 1, 65553, 1, 1, 65554, 1, 1, 65555, 1, 1, 65556, 1, 1, 65557, 1, 1, 65558, 1, 1, 65559, 1, 1, 65560, 1, 2, 131072, 1, 65536, 131073, 1, 65537, 131074, 1, 65537, 131075, 1, 65537, 131076, 1, 65537, 131077, 1, 65537, 131078, 1, 65537, 131079, 1, 65537, 131080, 1, 65537, 131081, 1, 65537, 131082, 1, 65537, 131083, 1, 65537, 131084, 1, 65537, 131085, 1, 65537, 131086, 1, 65537, 131087, 1, 65537, 131088, 1, 65537, 131089, 1, 65537, 131090, 1, 65537, 131091, 1, 65537, 131092, 1, 65537, 131093, 1, 65537, 131094, 1, 65537, 131095, 1, 65537, 131096, 1, 65538, 196608, 1, 65536, 196609, 1, 65537, 196610, 1, 65537, 196611, 1, 65537, 196612, 1, 65537, 196613, 1, 65537, 196614, 1, 65537, 196615, 1, 65537, 196616, 1, 65537, 196617, 1, 65537, 196618, 1, 65537, 196619, 1, 65537, 196620, 1, 65537, 196621, 1, 65537, 196622, 1, 65537, 196623, 1, 65537, 196624, 1, 65537, 196625, 1, 65537, 196626, 1, 65537, 196627, 1, 65537, 196628, 1, 65537, 196629, 1, 65537, 196630, 1, 65537, 196631, 1, 65537, 196632, 1, 65538, 262144, 1, 65536, 262145, 1, 65537, 262146, 1, 65537, 262147, 1, 65537, 262148, 1, 65537, 262149, 1, 65537, 262150, 1, 65537, 262151, 1, 65537, 262152, 1, 65537, 262153, 1, 65537, 262154, 1, 65537, 262155, 1, 65537, 262156, 1, 65537, 262157, 1, 65537, 262158, 1, 65537, 262159, 1, 65537, 262160, 1, 65537, 262161, 1, 65537, 262162, 1, 65537, 262163, 1, 65537, 262164, 1, 65537, 262165, 1, 65537, 262166, 1, 65537, 262167, 1, 65537, 262168, 1, 65538, 327680, 1, 65536, 327681, 1, 65537, 327682, 1, 65537, 327683, 1, 65537, 327684, 1, 65537, 327685, 1, 65537, 327686, 1, 65537, 327687, 1, 65537, 327688, 1, 65537, 327689, 1, 65537, 327690, 1, 65537, 327691, 1, 65537, 327692, 1, 65537, 327693, 1, 65537, 327694, 1, 65537, 327695, 1, 65537, 327696, 1, 65537, 327697, 1, 65537, 327698, 1, 65537, 327699, 1, 65537, 327700, 1, 65537, 327701, 1, 65537, 327702, 1, 65537, 327703, 1, 65537, 327704, 1, 65538, 393216, 1, 65536, 393217, 1, 65537, 393218, 1, 65537, 393219, 1, 65537, 393220, 1, 65537, 393221, 1, 65537, 393222, 1, 65537, 393223, 1, 65537, 393224, 1, 65537, 393225, 1, 65537, 393226, 1, 65537, 393227, 1, 65537, 393228, 1, 65537, 393229, 1, 65537, 393230, 1, 65537, 393231, 1, 65537, 393232, 1, 65537, 393233, 1, 65537, 393234, 1, 65537, 393235, 1, 65537, 393236, 1, 65537, 393237, 1, 65537, 393238, 1, 65537, 393239, 1, 65537, 393240, 1, 65538, 458752, 1, 65536, 458753, 1, 65537, 458754, 1, 65537, 458755, 1, 65537, 458756, 1, 65537, 458757, 1, 65537, 458758, 1, 65537, 458759, 1, 65537, 458760, 1, 65537, 458761, 1, 65537, 458762, 1, 65537, 458763, 1, 65537, 458764, 1, 65537, 458765, 1, 65537, 458766, 1, 65537, 458767, 1, 65537, 458768, 1, 65537, 458769, 1, 65537, 458770, 1, 65537, 458771, 1, 65537, 458772, 1, 65537, 458773, 1, 65537, 458774, 1, 65537, 458775, 1, 65537, 458776, 1, 65538, 524288, 1, 65536, 524289, 1, 65537, 524290, 1, 65537, 524291, 1, 65537, 524292, 1, 65537, 524293, 1, 65537, 524294, 1, 65537, 524295, 1, 65537, 524296, 1, 65537, 524297, 1, 65537, 524298, 1, 65537, 524299, 1, 65537, 524300, 1, 65537, 524301, 1, 65537, 524302, 1, 65537, 524303, 1, 65537, 524304, 1, 65537, 524305, 1, 65537, 524306, 1, 65537, 524307, 1, 65537, 524308, 1, 65537, 524309, 1, 65537, 524310, 1, 65537, 524311, 1, 65537, 524312, 1, 65538, 589824, 1, 65536, 589825, 1, 65537, 589826, 1, 65537, 589827, 1, 65537, 589828, 1, 65537, 589829, 1, 65537, 589830, 1, 65537, 589831, 1, 65537, 589832, 1, 65537, 589833, 1, 65537, 589834, 1, 65537, 589835, 1, 65537, 589836, 1, 65537, 589837, 1, 65537, 589838, 1, 65537, 589839, 1, 65537, 589840, 1, 65537, 589841, 1, 65537, 589842, 1, 65537, 589843, 1, 65537, 589844, 1, 65537, 589845, 1, 65537, 589846, 1, 65537, 589847, 1, 65537, 589848, 1, 65538, 655360, 1, 65536, 655361, 1, 65537, 655362, 1, 65537, 655363, 1, 65537, 655364, 1, 65537, 655365, 1, 65537, 655366, 1, 65537, 655367, 1, 65537, 655368, 1, 65537, 655369, 1, 65537, 655370, 1, 65537, 655371, 1, 65537, 655372, 1, 65537, 655373, 1, 65537, 655374, 1, 65537, 655375, 1, 65537, 655376, 1, 65537, 655377, 1, 65537, 655378, 1, 65537, 655379, 1, 65537, 655380, 1, 65537, 655381, 1, 65537, 655382, 1, 65537, 655383, 1, 65537, 655384, 1, 65538, 720896, 1, 65536, 720897, 1, 65537, 720898, 1, 65537, 720899, 1, 65537, 720900, 1, 65537, 720901, 1, 65537, 720902, 1, 65537, 720903, 1, 65537, 720904, 1, 65537, 720905, 1, 65537, 720906, 1, 65537, 720907, 1, 65537, 720908, 1, 65537, 720909, 1, 65537, 720910, 1, 65537, 720911, 1, 65537, 720912, 1, 65537, 720913, 1, 65537, 720914, 1, 65537, 720915, 1, 65537, 720916, 1, 65537, 720917, 1, 65537, 720918, 1, 65537, 720919, 1, 65537, 720920, 1, 65538, 786432, 1, 65536, 786433, 1, 65537, 786434, 1, 65537, 786435, 1, 65537, 786436, 1, 65537, 786437, 1, 65537, 786438, 1, 65537, 786439, 1, 65537, 786440, 1, 65537, 786441, 1, 65537, 786442, 1, 65537, 786443, 1, 65537, 786444, 1, 65537, 786445, 1, 65537, 786446, 1, 65537, 786447, 1, 65537, 786448, 1, 65537, 786449, 1, 65537, 786450, 1, 65537, 786451, 1, 65537, 786452, 1, 65537, 786453, 1, 65537, 786454, 1, 65537, 786455, 1, 65537, 786456, 1, 65538, 851968, 1, 65536, 851969, 1, 65537, 851970, 1, 65537, 851971, 1, 65537, 851972, 1, 65537, 851973, 1, 65537, 851974, 1, 65537, 851975, 1, 65537, 851976, 1, 65537, 851977, 1, 65537, 851978, 1, 65537, 851979, 1, 65537, 851980, 1, 65537, 851981, 1, 65537, 851982, 1, 65537, 851983, 1, 65537, 851984, 1, 65537, 851985, 1, 65537, 851986, 1, 65537, 851987, 1, 65537, 851988, 1, 65537, 851989, 1, 65537, 851990, 1, 65537, 851991, 1, 65537, 851992, 1, 65538, 917504, 1, 65536, 917505, 1, 65537, 917506, 1, 65537, 917507, 1, 65537, 917508, 1, 65537, 917509, 1, 65537, 917510, 1, 65537, 917511, 1, 65537, 917512, 1, 65537, 917513, 1, 65537, 917514, 1, 65537, 917515, 1, 65537, 917516, 1, 65537, 917517, 1, 65537, 917518, 1, 65537, 917519, 1, 65537, 917520, 1, 65537, 917521, 1, 65537, 917522, 1, 65537, 917523, 1, 65537, 917524, 1, 65537, 917525, 1, 65537, 917526, 1, 65537, 917527, 1, 65537, 917528, 1, 65538, 983040, 1, 65536, 983041, 1, 65537, 983042, 1, 65537, 983043, 1, 65537, 983044, 1, 65537, 983045, 1, 65537, 983046, 1, 65537, 983047, 1, 65537, 983048, 1, 65537, 983049, 1, 65537, 983050, 1, 65537, 983051, 1, 65537, 983052, 1, 65537, 983053, 1, 65537, 983054, 1, 65537, 983055, 1, 65537, 983056, 1, 65537, 983057, 1, 65537, 983058, 1, 65537, 983059, 1, 65537, 983060, 1, 65537, 983061, 1, 65537, 983062, 1, 65537, 983063, 1, 65537, 983064, 1, 65538, 1048576, 1, 65536, 1048577, 1, 65537, 1048578, 1, 65537, 1048579, 1, 65537, 1048580, 1, 65537, 1048581, 1, 65537, 1048582, 1, 65537, 1048583, 1, 65537, 1048584, 1, 65537, 1048585, 1, 65537, 1048586, 1, 65537, 1048587, 1, 65537, 1048588, 1, 65537, 1048589, 1, 65537, 1048590, 1, 65537, 1048591, 1, 65537, 1048592, 1, 65537, 1048593, 1, 65537, 1048594, 1, 65537, 1048595, 1, 65537, 1048596, 1, 65537, 1048597, 1, 65537, 1048598, 1, 65537, 1048599, 1, 65537, 1048600, 1, 65538, 1114112, 1, 131072, 1114113, 1, 131073, 1114114, 1, 131073, 1114115, 1, 131073, 1114116, 1, 131073, 1114117, 1, 131073, 1114118, 1, 131073, 1114119, 1, 131073, 1114120, 1, 131073, 1114121, 1, 131073, 1114122, 1, 131073, 1114123, 1, 131073, 1114124, 1, 131073, 1114125, 1, 131073, 1114126, 1, 131073, 1114127, 1, 131073, 1114128, 1, 131073, 1114129, 1, 131073, 1114130, 1, 131073, 1114131, 1, 131073, 1114132, 1, 131073, 1114133, 1, 131073, 1114134, 1, 131073, 1114135, 1, 131073, 1114136, 1, 131074 )

[node name="Weapons" parent="Tabs" instance=ExtResource( 1 )]
script = SubResource( 1 )

[node name="Armors" parent="Tabs" instance=ExtResource( 1 )]
show_behind_parent = true
position = Vector2( 36, 0 )
script = SubResource( 1 )

[node name="Scrolls" parent="Tabs" instance=ExtResource( 1 )]
show_behind_parent = true
position = Vector2( 72, 0 )
script = SubResource( 1 )

[node name="Potions" parent="Tabs" instance=ExtResource( 1 )]
show_behind_parent = true
position = Vector2( 108, 0 )
script = SubResource( 1 )

[node name="Throwings" parent="Tabs" instance=ExtResource( 1 )]
show_behind_parent = true
position = Vector2( 144, 0 )
script = SubResource( 1 )

[node name="Talisman" parent="Tabs" instance=ExtResource( 1 )]
show_behind_parent = true
position = Vector2( 180, 0 )
script = SubResource( 1 )

[node name="Description" type="TileMap" parent="."]
show_behind_parent = true
tile_set = ExtResource( 3 )
cell_size = Vector2( 9, 9 )
format = 1
tile_data = PoolIntArray( 131097, 1, 0, 131098, 1, 1, 131099, 1, 1, 131100, 1, 1, 131101, 1, 1, 131102, 1, 1, 131103, 1, 1, 131104, 1, 1, 131105, 1, 1, 131106, 1, 1, 131107, 1, 1, 131108, 1, 1, 131109, 1, 2, 196633, 1, 65536, 196634, 1, 65537, 196635, 1, 65537, 196636, 1, 65537, 196637, 1, 65537, 196638, 1, 65537, 196639, 1, 65537, 196640, 1, 65537, 196641, 1, 65537, 196642, 1, 65537, 196643, 1, 65537, 196644, 1, 65537, 196645, 1, 65538, 262169, 1, 65536, 262170, 1, 65537, 262171, 1, 65537, 262172, 1, 65537, 262173, 1, 65537, 262174, 1, 65537, 262175, 1, 65537, 262176, 1, 65537, 262177, 1, 65537, 262178, 1, 65537, 262179, 1, 65537, 262180, 1, 65537, 262181, 1, 65538, 327705, 1, 65536, 327706, 1, 65537, 327707, 1, 65537, 327708, 1, 65537, 327709, 1, 65537, 327710, 1, 65537, 327711, 1, 65537, 327712, 1, 65537, 327713, 1, 65537, 327714, 1, 65537, 327715, 1, 65537, 327716, 1, 65537, 327717, 1, 65538, 393241, 1, 65536, 393242, 1, 65537, 393243, 1, 65537, 393244, 1, 65537, 393245, 1, 65537, 393246, 1, 65537, 393247, 1, 65537, 393248, 1, 65537, 393249, 1, 65537, 393250, 1, 65537, 393251, 1, 65537, 393252, 1, 65537, 393253, 1, 65538, 458777, 1, 65536, 458778, 1, 65537, 458779, 1, 65537, 458780, 1, 65537, 458781, 1, 65537, 458782, 1, 65537, 458783, 1, 65537, 458784, 1, 65537, 458785, 1, 65537, 458786, 1, 65537, 458787, 1, 65537, 458788, 1, 65537, 458789, 1, 65538, 524313, 1, 65536, 524314, 1, 65537, 524315, 1, 65537, 524316, 1, 65537, 524317, 1, 65537, 524318, 1, 65537, 524319, 1, 65537, 524320, 1, 65537, 524321, 1, 65537, 524322, 1, 65537, 524323, 1, 65537, 524324, 1, 65537, 524325, 1, 65538, 589849, 1, 65536, 589850, 1, 65537, 589851, 1, 65537, 589852, 1, 65537, 589853, 1, 65537, 589854, 1, 65537, 589855, 1, 65537, 589856, 1, 65537, 589857, 1, 65537, 589858, 1, 65537, 589859, 1, 65537, 589860, 1, 65537, 589861, 1, 65538, 655385, 1, 131072, 655386, 1, 131073, 655387, 1, 131073, 655388, 1, 131073, 655389, 1, 131073, 655390, 1, 131073, 655391, 1, 131073, 655392, 1, 131073, 655393, 1, 131073, 655394, 1, 131073, 655395, 1, 131073, 655396, 1, 131073, 655397, 1, 131074 )

[node name="CurrentItem" type="TileMap" parent="."]
tile_set = ExtResource( 3 )
cell_size = Vector2( 9, 9 )
format = 1
tile_data = PoolIntArray( 720921, 1, 0, 720922, 1, 1, 720923, 1, 1, 720924, 1, 1, 720925, 1, 1, 720926, 1, 1, 720927, 1, 1, 720928, 1, 1, 720929, 1, 1, 720930, 1, 1, 720931, 1, 1, 720932, 1, 1, 720933, 1, 2, 786457, 1, 65536, 786458, 1, 65537, 786459, 1, 65537, 786460, 1, 65537, 786461, 1, 65537, 786462, 1, 65537, 786463, 1, 65537, 786464, 1, 65537, 786465, 1, 65537, 786466, 1, 65537, 786467, 1, 65537, 786468, 1, 65537, 786469, 1, 65538, 851993, 1, 65536, 851994, 1, 65537, 851995, 1, 65537, 851996, 1, 65537, 851997, 1, 65537, 851998, 1, 65537, 851999, 1, 65537, 852000, 1, 65537, 852001, 1, 65537, 852002, 1, 65537, 852003, 1, 65537, 852004, 1, 65537, 852005, 1, 65538, 917529, 1, 65536, 917530, 1, 65537, 917531, 1, 65537, 917532, 1, 65537, 917533, 1, 65537, 917534, 1, 65537, 917535, 1, 65537, 917536, 1, 65537, 917537, 1, 65537, 917538, 1, 65537, 917539, 1, 65537, 917540, 1, 65537, 917541, 1, 65538, 983065, 1, 65536, 983066, 1, 65537, 983067, 1, 65537, 983068, 1, 65537, 983069, 1, 65537, 983070, 1, 65537, 983071, 1, 65537, 983072, 1, 65537, 983073, 1, 65537, 983074, 1, 65537, 983075, 1, 65537, 983076, 1, 65537, 983077, 1, 65538, 1048601, 1, 65536, 1048602, 1, 65537, 1048603, 1, 65537, 1048604, 1, 65537, 1048605, 1, 65537, 1048606, 1, 65537, 1048607, 1, 65537, 1048608, 1, 65537, 1048609, 1, 65537, 1048610, 1, 65537, 1048611, 1, 65537, 1048612, 1, 65537, 1048613, 1, 65538, 1114137, 1, 65536, 1114138, 1, 65537, 1114139, 1, 65537, 1114140, 1, 65537, 1114141, 1, 65537, 1114142, 1, 65537, 1114143, 1, 65537, 1114144, 1, 65537, 1114145, 1, 65537, 1114146, 1, 65537, 1114147, 1, 65537, 1114148, 1, 65537, 1114149, 1, 65538, 1179673, 1, 65536, 1179674, 1, 65537, 1179675, 1, 65537, 1179676, 1, 65537, 1179677, 1, 65537, 1179678, 1, 65537, 1179679, 1, 65537, 1179680, 1, 65537, 1179681, 1, 65537, 1179682, 1, 65537, 1179683, 1, 65537, 1179684, 1, 65537, 1179685, 1, 65538, 1245209, 1, 131072, 1245210, 1, 131073, 1245211, 1, 131073, 1245212, 1, 131073, 1245213, 1, 131073, 1245214, 1, 131073, 1245215, 1, 131073, 1245216, 1, 131073, 1245217, 1, 131073, 1245218, 1, 131073, 1245219, 1, 131073, 1245220, 1, 131073, 1245221, 1, 131074 )

[node name="ItemList" parent="." instance=ExtResource( 4 )]
position = Vector2( 9, 45 )
script = ExtResource( 7 )

[node name="TextContainer" type="Node2D" parent="."]
position = Vector2( 196, 35 )
scale = Vector2( 0.25, 0.25 )

[node name="Label" type="Label" parent="TextContainer"]
margin_left = -668.0
margin_right = 50.0
margin_bottom = 35.0
custom_colors/font_color = Color( 0.807843, 0.858824, 0.882353, 1 )
custom_fonts/font = ExtResource( 5 )
text = "Item                                            Key"

[node name="MenuScroller" parent="." instance=ExtResource( 6 )]
